src/app/components/home/home.component.css
.wrapper {
  /* background: linear-gradient(rgba(252,92,125,.5),rgba(106,130,251,.5)), url("/assets/images/mountain.jpg") no-repeat center center; */
  /* height: calc(100vh - 50px); */
  min-height: 100%;
  min-width: 100%;
  background-size: cover;
}

h1 {
  background: linear-gradient(to right, #ff9c9ccf 20%, #2be084 80%);
  -webkit-text-fill-color: transparent;
  font-weight: bold;
  font-size: 3vw;

}

.box1 .rectangle {
  position: relative;
  height: 90px;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -9px 2px 24px 0 rgba(0, 0, 0, 0.5);
  background-color: #285a5d;
  padding: 10px;
  box-sizing: border-box;
  width: 218px;
  font-size: 16px;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
}

.box1 .close {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.box1 .image-block {
  /* display: inline-block;
  position: absolute;
  top: 25px;
  left: 20px; */
  float: left;
  margin-left:15px;
}

.box1 .description {
  text-align: center;
  float: left;
  padding-left: 20px;
  width: 50%;
}

.box1 .description hr {
  width: 49px;
  opacity: 0.1;
  border: solid 1px #ffffff;
  margin-top: 9px;
}

.box1 .description p {
  margin: 0;
  color: #ffffff;
}

.box1 .description img {
  margin-top: 5px;
}

.box1 .M6-Driver {
  font-family: Avenir;
  font-size: 17.6px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
  margin: 0;
}

.box1 .view {
  width: 107.7px;
  height: 20.9px;
  border-radius: 3.3px;
  border: solid 1.1px #f5f5f5;
  color: #fff;
  font-family: Avenir;
  font-size: 13.2px;
  padding: 2px;
  cursor: pointer;
}


.box2 .rectangle {
  position: relative;
  width: 249px;
  height: 110px;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -9px 2px 24px 0 rgba(0, 0, 0, 0.5);
  background-color: #285a5d;
  padding: 15px;
  box-sizing: border-box;
  font-family: Avenir;
}

.box2 .close {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.box2 .image-block {
  /* display: inline-block;
  position: absolute;
  top: 25px;
  left: 20px; */
  float: left;
}

.box2 .description {
  float: left;
  padding-left: 20px;
}

.box2 .description p {
  margin: 0;
  font-family: Avenir;
  font-size: 12px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
}

.box2 .description img {
  margin-top: 5px;
}

.box2 .M6-Driver {
  font-family: Avenir;
  font-size: 17.6px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
  margin: 0;
}

.box2 .view {
  width: 107.7px;
  height: 20.9px;
  border-radius: 3.3px;
  border: solid 1.1px #f5f5f5;
  color: #fff;
  font-family: Avenir;
  font-size: 13.2px;
  padding: 2px;
  cursor: pointer;
}

.box3 .rectangle {
  position: relative;
  width: 265px;
  height: 114px;
  opacity: 0.8;
  border-radius: 10px;
  box-shadow: -9px 2px 24px 0 rgba(0, 0, 0, 0.5);
  background-color: #285a5d;
  padding: 15px;
  box-sizing: border-box;
}

.box3 .close {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

.box3 .image-block {
  /* display: inline-block;
  position: absolute;
  top: 25px;
  left: 20px; */
  float: left;
}

.box3 .description {
  float: left;
  padding-left: 20px;
}

.box3 .description p {
  margin: 0;
  font-family: Avenir;
  font-size: 12px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff; 
}

.box3 .description img {
  margin-top: 5px;
}

.box3 .title {
  font-family: Avenir;
  font-size: 13.6px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #ffffff;
  margin: 0;
}

.box3 .view {
  width: 107.7px;
  height: 20.9px;
  border-radius: 3.3px;
  border: solid 1.1px #f5f5f5;
  color: #fff;
  font-family: Avenir;
  font-size: 13.2px;
  padding: 2px;
  cursor: pointer;
}

.box4 .rectangle {
  position: relative;
  width: 265px;
  /* height: 430px; */
  opacity: 0.97;
  /* border-radius: 0px 10px 10px 0px; */
  box-shadow: -8px 2px 22px 0 rgba(0, 0, 0, 0.5);
  background-color: #fff;
  border: 15px solid #285a5d;
  text-align: initial;
}

.box4 .img-wrap {
  /* display: flex;
  align-items: center;
  justify-content: center;
  height: 100%; */
}

.box4 .img-wrap img {
  /* width: 430px;
  height: 410px; */
}

.box4 .close {
  position: absolute;
  top: 5px;
  right: 10px;
  cursor: pointer;
}

.video-section{
  /* width: 952px !important; */
  padding-top: 15px !important;
}

.button a {
  padding: 5px;
  border-radius: 10px;
  border: solid 1px #dcdcdc;
  background-color: #fafafa;
  color: #656565;
}

.box5 .rectangle {
  position: relative;
  width: 290px;
  /* height: 496px; */
  opacity: 0.97;
  border-radius: 10px 0px 0px 10px;
  /* border-radius: 9px; */
  box-shadow: -8px 2px 22px 0 rgba(0, 0, 0, 0.5);
  background-color: #fff;
  border: 15px solid #37787c;
  text-align: initial;
}

.box5 .img-wrap {
  /* display: flex;
  align-items: center;
  justify-content: center;
  height: 100%; */
}

.box5 .img-wrap img {
  /* width: 462px;
  height: 463px; */
}

.rectangle .close {
  top: 7px;
  right: 8px;
  position: absolute;
}
.box6 .rectangle {
  position: relative;
  width: 577px;
  height: 427px;
  /* opacity: 0.97; */
  border-radius: 9px;
  box-shadow: -8px 2px 22px 0 rgba(0, 0, 0, 0.5);
  background-color: #ffffff;
}

.video-js .vjs-overlay-bottom-left {
    /* bottom: 10.5em !important; */
 }

 .video-js .vjs-overlay{
   text-align:left;
 }
.header-block .close {
  float: right;
  margin-top: 10px;
  margin-right: 10px;
}

.header-block {
  position: relative;
  width: 555px;
  height: 74px;
  border-radius: 6px;
  background-color: #f6f6f6;
}

.btn-spacing{
  margin-left: 10px;
}
/* ... */

